--- a/index.html
+++ b/index.html
@@ -1,5 +1,34 @@
+<!DOCTYPE html>
 <html>
-  <body>
-      Hello DBC!
+
+<head>
+  <title>DavyWebz on the HUB</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="stylesheets/default.css"/>
+  <link rel="stylesheet" type="text/css" href="stylesheets/main-index.css"/>
+	</head>
+
+<body>
+	<div class="divA"><img src="imgs/redlogo.png" alt="Logo" /></div>
+
+	<div class="divB"><h2><img src="imgs/redweebutton.png" alt="wee button"> My latest blog post</h2>
+
+		<a href="blog/t2-css-design.html">Get CLASSy you ID</a></div>
+
+	<div class="divC">
+		<h3>Reach Me</h3><ul>
+			<li><a href="#">Twitter</a></li>
+			<li><a href="#">Linked In</a></li>
+			<li><a href="#">Indeed</a></li>
+			<li><a href="#">GitHub</a></li>
+		</ul>
+
+		<h3>About Me</h3><img src="imgs/DC1139-67.png" alt="my image" />
+		<p class="caption">"ME", by Me</p><ul><li>Flexible</li><li>Tactical</li><li>Practical</li><li>Smarty</li><li>Arty</li></ul>
+
+		<h3>My Portfolio</h3><a href="blog/index.html">Blog Portal</a>
+
+		<h3>Footie</h3><p>- reserved -</p></div>
   </body>
+
 </html>
