Post week3 blog content & updated indices

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<div class="divB"><h2><img src="imgs/redweebutton.png" alt="wee button"> My latest blog post</h2>
 
-		<a href="blog/t2-css-design.html">Get CLASSy you ID</a></div>
+		<a href="blog/t3-arrays-hashes.html">Arrays & Hashes</a></div>
 
 	<div class="divC">
 		<h3>Reach Me</h3><ul>
