wk4 blog updates set 1

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<div class="divB"><h2><img src="imgs/redweebutton.png" alt="wee button"> My latest blog post</h2>
 
-		<a href="blog/t3-arrays-hashes.html">Arrays & Hashes</a></div>
+		<a href="blog/t4-enumerable-methods.html">Enumberable#map</a></div>
 
 	<div class="divC">
 		<h3>Reach Me</h3><ul>
@@ -28,7 +28,7 @@
 
 		<h3>My Portfolio</h3><a href="blog/index.html">Blog Portal</a>
 
-		<h3>Footie</h3><p>- reserved -</p></div>
+		<h3>Footie</h3><p class="weetext">&#169; 2015 DCampbell All Rights Reserved</p></div>
   </body>
 
 </html>
