Add week29 website enhancements, blog posts

--- a/index.html
+++ b/index.html
@@ -11,19 +11,20 @@
 <body>
 	<div class="divA"><img src="imgs/redlogo.png" alt="Logo" /></div>
 
-	<div class="divB"><h2><img src="imgs/redweebutton.png" alt="wee button"> My latest blog post</h2>
+	<div class="divB"><h2><img src="imgs/redweebutton.png" alt="wee button"> My latest blog posts</h2>
 
-		<a href="blog/t4-enumerable-methods.html">Enumberable#map</a></div>
+		<p><a href="blog/t5-ruby-classes.html">Class Objects in Ruby</a></p>
+    <p><a href="blog/c5-feedback.html">Pairs & Feedback</a></p>
+
+    </div>
 
 	<div class="divC">
-		<h3>Reach Me</h3><ul>
-			<li><a href="#">Twitter</a></li>
-			<li><a href="#">Linked In</a></li>
-			<li><a href="#">Indeed</a></li>
-			<li><a href="#">GitHub</a></li>
-		</ul>
+		<h3>Reach Me</h3><p>
+			<a href="#"><img src="imgs/twitter_alt.png" alt="twitter"/></a><a href="#"><img src="imgs/linkedin_alt.png" alt="L In"/><a href="#"><img src="imgs/github_alt.png" alt ="hub"/></a><br/>
+      <ul><li><a href="#">Indeed</a></li>
+		</ul></p>
 
-		<h3>About Me</h3><img src="imgs/DC1139-67.png" alt="my image" />
+		<h3><a href="about.html">About Me</a></h3><img src="imgs/DC1139-67.png" alt="my image" />
 		<p class="caption">"ME", by Me</p><ul><li>Flexible</li><li>Tactical</li><li>Practical</li><li>Smarty</li><li>Arty</li></ul>
 
 		<h3>My Portfolio</h3><a href="blog/index.html">Blog Portal</a>
