Add w6/ISOW30 content and blogs

--- a/about.html
+++ b/about.html
@@ -19,5 +19,6 @@
 </p><p>When I'm not being professional I like to spend time -- when it's not freezing -- outdoors. Or working on a painting. (I enjoy torturing myself with watercolors and I do take paid commissions. And have gotten some.) Yet, I sing very badly. Shove me towards the back if birthday cake is heading our way.
 
 </p>
+<div class="divK"><a href="./index.html">Return to Main Page</a></div>
 </body>
 </html>
