--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 	<div class="divB"><h2><img src="imgs/redweebutton.png" alt="wee button"> My latest blog posts</h2>
 
-		<p><a href="blog/t5-ruby-classes.html">Class Objects in Ruby</a></p>
-    <p><a href="blog/c5-feedback.html">Pairs & Feedback</a></p>
+		<p><a href="blog/t6-oop-concepts.html">OOP Concepts</a></p>
+    <p><a href="blog/c6-stereotype-threat.html">Stereotype Threats</a></p>
 
     </div>
 
@@ -27,9 +27,9 @@
 		<h3><a href="about.html">About Me</a></h3><img src="imgs/DC1139-67.png" alt="my image" />
 		<p class="caption">"ME", by Me</p><ul><li>Flexible</li><li>Tactical</li><li>Practical</li><li>Smarty</li><li>Arty</li></ul>
 
-		<h3>My Portfolio</h3><a href="blog/index.html">Blog Portal</a>
+		<h3>My Portfolio</h3><p><a href="blog/index.html">Blog Portal</a>&emsp; &bull; &emsp;<a href="./resume.html">Resume</a></p>
 
-		<h3>Footie</h3><p class="weetext">&#169; 2015 DCampbell All Rights Reserved</p></div>
+		<h3><!--Footie--></h3><p class="weetext">&#169; 2015 DCampbell All Rights Reserved</p></div>
   </body>
 
 </html>
