Add week 32 content

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 	<div class="divB"><h2><img src="imgs/redweebutton.png" alt="wee button"> My latest blog posts</h2>
 
-		<p><a href="blog/t7-JavaScript.html">Ruby vs Javascript</a></p>
-    <p><a href="blog/c7-values.html">Values</a></p>
+		<p><a href="blog/t8-tech.html">Sort Of</a></p>
+    <p><a href="blog/c8-conflict.html">Conflicted</a></p>
 
     </div>
 
