--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 	<div class="divB"><h2><img src="imgs/redweebutton.png" alt="wee button"> My latest blog posts</h2>
 
-		<p><a href="blog/t8-tech.html">Sort Of</a></p>
-    <p><a href="blog/c8-conflict.html">Conflicted</a></p>
+		<p><a href="blog/t9-meaculpa.html">Mea Culpa</a></p>
+    <p><a href="blog/c9-questions.html">Questions</a></p>
 
     </div>
 
